# simple-game-engine

./: .gitignore  CMakeLists.txt  PullExternal.cmake  README.md
resources/: logger.conf
resources/configs/: default.xml  logger.conf
resources/models/: suzannes.fbx  suzannes.mtl  suzannes.ply  testCube.blend  testCube.blend1  testCube.mtl  test_scene.dae  walls.blend  walls.blend1  walls.mtl
resources/models/cube/: cube.blend  cube.blend1  cube.mtl
resources/models/sponza/: sponza.mtl
resources/scenes/: test_rt_scene.xml  test_scene.xml
resources/shaders/: depth.frag  depth.vert  dl_pass.frag  dl_pass.vert  normals.frag  normals.vert
resources/shaders/deferred_shading/: blit.frag  blitAndGamma.frag  debug_geometry_pass.frag  debug_geometry_pass.vert  debug_light.frag  debug_light.vert  geometry_pass.frag  geometry_pass.vert  lighting_pass.frag  lighting_pass.vert  normals.vert
resources/shaders/dl/: geometry_pass.frag  geometry_pass.vert  lighting_pass.frag  lighting_pass.geom  lighting_pass.vert
resources/shaders/shadowmapping/: test.frag  test.vert
sge_lib/: CMakeLists.txt
sge_lib/sge/configmanager/: .ConfigManager.hpp.swp  ConfigManager.cpp  ConfigManager.hpp
sge_lib/sge/display/: DisplayManager.cpp  DisplayManager.hpp  IDisplay.hpp  IDisplayManager.hpp  SFMLDisplay.cpp  SFMLDisplay.hpp  SFMLDisplayManager.cpp  SFMLDisplayManager.hpp
sge_lib/sge/displaymanager/: DisplayManager.cpp  DisplayManager.hpp  IDisplayManager.hpp  SFMLDisplayManager.cpp  SFMLDisplayManager.hpp
sge_lib/sge/graphics/: GLSLRenderBuffer.cpp  GLSLRenderBuffer.hpp  GLSLRenderTarget.cpp  GLSLRenderTarget.hpp  GLSLShader.cpp  GLSLShader.hpp  IGraphicsManager.hpp  IRenderBuffer.cpp  IRenderBuffer.hpp  IRenderTarget.cpp  IRenderTarget.hpp  IShader.cpp  IShader.hpp  OGLGraphicsManager.cpp  OGLGraphicsManager.hpp  ShaderManager.cpp  ShaderManager.hpp
sge_lib/sge/graphics/material/: material.cpp  material.hpp
sge_lib/sge/graphics/shaders/: GLSLShader.cpp  GLSLShader.hpp  IShader.cpp  IShader.hpp  Shader.cpp  Shader.hpp  ShaderManager.cpp  ShaderManager.hpp  SubShader.cpp  SubShader.hpp
sge_lib/sge/graphics/texture/: DiffuseTexture.cpp  DiffuseTexture.hpp  GLSLTexture.cpp  GLSLTexture.hpp  ITexture.cpp  ITexture.hpp  OpacityTexture.cpp  OpacityTexture.hpp  texturefactory.cpp  texturefactory.hpp
sge_lib/sge/graphicsmanager/: GLSLShader.cpp  GLSLShader.hpp  IGraphicsManager.hpp  IShader.hpp  OGLGraphicsManager.hpp  ShaderManager.cpp  ShaderManager.hpp
sge_lib/sge/input/: input.cpp  input.hpp  sfmlinputhandler.cpp  sfmlinputhandler.hpp
sge_lib/sge/model/: Entity.cpp  Entity.hpp  ILight.hpp  Light.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  ModelImporter.cpp  ModelImporter.hpp  PointLight.hpp  aabb.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp
sge_lib/sge/model/geometry/: box.hpp  frustum.hpp  overlayquad.cpp  point.hpp
sge_lib/sge/model/lighting/: shadowmap.cpp  shadowmap.hpp
sge_lib/sge/scene/: camera.cpp  camera.hpp  scene.cpp  scene.hpp  sceneimporter.cpp  sceneimporter.hpp  scenemanager.cpp  scenemanager.hpp
sge_lib/sge/scene/bvh/: aabb.hpp  bvh.cpp  bvh.hpp  node.hpp  ssbo.cpp  ssbo.hpp  tri.hpp
sge_lib/sge/scene/entity/: component.cpp  component.hpp  drawablecomponent.hpp  entity.cpp  entity.hpp
sge_lib/sge/scene/geometry/: overlayquad.cpp  overlayquad.hpp
sge_lib/sge/scene/importer/: processors.cpp  processors.hpp  sceneimporter.cpp  sceneimporter.hpp
sge_lib/sge/scene/importer/processors/: camera.cpp  light.cpp  model.cpp  model.hpp  transform.cpp
sge_lib/sge/scripting/: objectscript.cpp  objectscript.hpp
sge_lib/sge/time/: time.cpp  time.hpp
sge_lib/sge/utils/: export.hpp  info.cpp  timer.hpp  utils.cpp  utils.hpp
sge_sfml_app/: CMakeLists.txt  cameracontrol.cpp  cameracontrol.hpp  main.cpp  shadowmap.cpp  shadowmap.hpp
sge_sfml_app/gamescripts/: cameracontrol.cpp  cameracontrol.hpp  demolightscripts.hpp
